<resources>
    <string name="app_name">Teletaxi Driver</string>
    <string name="splash_image">Imagen de Bienvenida</string>
    <string name="email">Correo</string>
    <string name="pswd">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="register">Registrarse</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_image">Imagen de Perfil</string>
    <string name="name">Nombre</string>
    <string name="phone">Número de teléfono</string>
    <string name="save">Guardar</string>
    <string name="plate">Número de Placa</string>
</resources>
